# Tesis_torso

./: justina_setup.sh  panHead.cpp
hardware_tools/: CMakeLists.txt  README.md  package.xml
hardware_tools/include/hardware_tools/: Hardware.hpp
hardware_tools/launch/: hardware.launch.xml
hardware_tools/src/: Hardware.cpp
head/: CMakeLists.txt  package.xml
head/config/: head_params.yaml
head/launch/: head.launch.xml
head/src/: head_node.cpp
torso/: CMakeLists.txt  README.md  package.xml
torso/launch/: torso.launch.xml
torso/src/: torso_node.cpp
